# reef

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
src/: app.rs  async_tasks.rs  bookmarks.rs  cli.rs  constants.rs  error.rs  lib.rs  main.rs  persistence.rs  search.rs  toc.rs  types.rs
src/epub/: code_highlight.rs  mod.rs  parser.rs  renderer.rs
src/ui/: input_handler.rs  layout.rs  mod.rs
src/ui/widgets/: bookmarks.rs  loading.rs  mod.rs
src/ui/widgets/popups/: book_picker.rs  bookmark_prompt.rs  error.rs  help.rs  metadata.rs  mod.rs  search.rs
