[package]
name = "epub-reader"
version = "0.0.1"
edition = "2021"
description = "A cross-platform TUI EPUB reader for developers"
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# CLI
clap = { version = "4.5", features = ["derive"] }

# EPUB Parsing
epub = "2.1"
zip = "7.0"

# HTML/Text Processing
scraper = "0.25"
html5ever = "0.36"
syntect = "5.3"
textwrap = "0.16"

# Tree widget
tui-tree-widget = "0.23"

# State Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

# Utility
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
regex = "1.12"
ctrlc = "3.5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Terminal background detection
termcolor = "1.4"
termbg = "0.6"

[dev-dependencies]
tempfile = "3.24"
