[package]
name = "reef"
version = "0.0.1"
edition = "2024"
description = "A terminal-based EPUB reader for reading ebooks from the command line."
license = "MIT"

[dependencies]
# TUI Framework
ratatui = "0.29"
crossterm = "0.29"

# CLI
clap = { version = "4.5", features = ["derive"] }

# EPUB Parsing
epub = "2.1"
zip = "7.0"

# HTML/Text Processing
scraper = "0.25"
html5ever = "0.36"
syntect = "5.3"
textwrap = "0.16"

# Tree widget
tui-tree-widget = "0.23"

# State Persistence
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0"

# Async Runtime
tokio = { version = "1.48", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Utility
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.5"
regex = "1.12"
ctrlc = "3.5"

# Logging
log = "0.4.29"
env_logger = "0.11.8"

# Terminal background detection
termcolor = "1.4"
termbg = "0.6"

[dev-dependencies]
tempfile = "3.24"
